# code

./: Lzma.py  README.txt  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  backup.ipynb  backup.py  compress.ipynb  config_manager.ipynb  config_manager.py  decrypt.cpp  decrypt.ipynb  decrypt.py  encrypt.cpp  encrypt.ipynb  encrypt.py  file_manager_config.json  huffman.ipynb  huffman.py  huffman_README.txt  lzma.cpp  main.ipynb  main.py  main.spec  main1.ipynb  main1.py  main1.spec  myapp.spec  pack.cpp  pack.py  settings.ipynb  settings.py  test.txt  unpack.cpp  unpack.py
.ipynb_checkpoints/: Lzma-checkpoint.ipynb  Lzma-checkpoint.py  backup-checkpoint.ipynb  backup-checkpoint.py  compress-checkpoint.ipynb  decrypt-checkpoint.py  encrypt-checkpoint.ipynb  encrypt-checkpoint.py  extract-checkpoint.ipynb  huffman-checkpoint.py  main-checkpoint.ipynb  main-checkpoint.py  main1-checkpoint.ipynb  main1-checkpoint.py  pack-checkpoint.py  unpack-checkpoint.py
BH_DLL/: BH_DLL.sln
BH_DLL/BH_DLL/: BH_DLL.vcxproj  BH_DLL.vcxproj.filters  BH_dll.cpp  BH_dll.h
BH_DLL/BH_DLL/x64/Debug/: BH_DLL.dll.recipe  BH_DLL.ilk  vc143.idb
BH_DLL/x64/Debug/: BH_DLL.exp  BH_DLL.lib
Decrypt/: Decrypt.sln
Decrypt/Decrypt/: Decrypt.cpp  Decrypt.h  Decrypt.vcxproj  Decrypt.vcxproj.filters  Decrypt1.cpp  TestDLL.cpp
Decrypt/Decrypt/encrypted/: AES_oWuqDCuKuZoCZxGJ_LZMA_1.txt.tgz
Decrypt/Decrypt/x64/Debug/: Decrypt.dll.recipe  Decrypt.ilk  vc143.idb
Decrypt/x64/Debug/: Decrypt.exp  Decrypt.lib
Dll1/: Dll1.sln
Dll1/Dll1/: Dll1.vcxproj  Dll1.vcxproj.filters  MathLibrary.cpp  MathLibrary.h  test.cpp
Dll1/Dll1/x64/Debug/: Dll1.dll.recipe  vc143.idb
Dll1/x64/Debug/: Dll1.exp  Dll1.lib
Encrypt/: Encrypt.sln
Encrypt/Encrypt/: Encrypt.cpp  Encrypt.h  Encrypt.vcxproj  Encrypt.vcxproj.filters  Test.cpp
Encrypt/Encrypt/x64/Debug/: Encrypt.dll.recipe  Encrypt.ilk  vc143.idb
Encrypt/x64/Debug/: Encrypt.exp  Encrypt.lib
Huffman/: Huffman.sln
Huffman/Huffman/: Huffman.vcxproj  Huffman.vcxproj.filters  HuffmanDLL.cpp  HuffmanDLL.h  TestHuffmanDLL.cpp  pch.h
Huffman/Huffman/x64/Debug/: Huffman.dll.recipe  Huffman.ilk  vc143.idb
Huffman/x64/Debug/: Huffman.exp  Huffman.lib
LZMA/: LZMA.sln
LZMA/LZMA/: LZMA.cpp  LZMA.h  LZMA.vcxproj  LZMA.vcxproj.filters  pch.h
LZMA/LZMA/x64/Debug/: LZMA.dll.recipe  LZMA.ilk  vc143.idb
LZMA/x64/Debug/: LZMA.exp  LZMA.lib
Pack/: Pack.sln
Pack/Pack/: Pack.vcxproj  Pack.vcxproj.filters  PackExceptions.h  PackLib.cpp  PackLib.h  PackTypes.h
Pack/Pack/x64/Debug/: Pack.dll.recipe  Pack.ilk  vc143.idb
Pack/x64/Debug/: Pack.exp  Pack.lib
Unpack/: Unpack.sln
Unpack/Unpack/: Unpack.cpp  Unpack.def  Unpack.h  Unpack.vcxproj  Unpack.vcxproj.filters  pch.h
Unpack/Unpack/x64/Debug/: Unpack.dll.recipe  Unpack.ilk  vc143.idb
Unpack/x64/Debug/: Unpack.exp  Unpack.lib
backup/20250925191432/: huffman.ipynb  main.ipynb  pack.ipynb
backup/20250925191707/: extract.ipynb  main.ipynb
backup/20250925194444/: decrypt.py  encrypt.ipynb
backup/20250925194531/: main.ipynb
backup/20250925195110/: main.ipynb  pack.py
backup/20250925195203/: encrypt.py
backup/20250925195557/: Lzma.py  main.ipynb
backup/20250925200200/: backup.ipynb  decrypt.ipynb  main.ipynb  unpack.py
backup/20250925200521/: Lzma.ipynb  main.ipynb
test/: CMakeLists.txt  bindings.cpp  calculator_widget.ipynb  calculator_widget.py  image_processor_widget.py  main.ipynb  main_window.py
test/.ipynb_checkpoints/: image_processor_widget-checkpoint.ipynb  main_window-checkpoint.ipynb
test/cpp_backend/: CMakeLists.txt
test/cpp_backend/include/: Calculator.h
test/cpp_backend/src/: bindings.cpp
useDLL/: useDLL.sln
useDLL/useDLL/: main.cpp  useDLL.vcxproj
useDLL/useDLL/x64/Debug/: useDLL.exe.recipe  useDLL.ilk  vc143.idb
(+79 files in other folders)
